# bad

./: README.md  debugger.go  debugger_test.go  dump_syscall_ids.py  dwarf_test.go  elf_test.go  go.mod  go.sum  hardware_stop_point.go  lib.go  loaded_elf_file.go  process_state.go  registers.go  registers_test.go  software_break_point_site.go  stop_points.go  syscall_catch_policy.go  syscall_ids.go  util_test.go
debugger/: call_stack.go  debugger.go  debugger_test.go  process_status.go  signal.go  source_files.go  thread_state.go  thread_status.go  typed_data.go
debugger/catchpoint/: dump_syscall_ids.py  syscall_catch_policy.go  syscall_ids.go  syscall_trap_info.go
debugger/common/: bits_appender.go  bits_appender_test.go  common.go
debugger/expression/: data_descriptor.go  grammar.go  grammar.lr  lexer.go  reducer.go  result_pool.go  tools.go  typed_data.go
debugger/loadedelf/: dwarf_test.go  elf_test.go  file.go
debugger/loadedelves/: dwarf_test.go  elf_test.go  file.go  files.go
debugger/memory/: disassembler.go  memory.go
debugger/registers/: registers.go  registers_test.go  spec.go  state.go  value.go
debugger/stoppoint/: hardware_stop_site.go  ref_count_stop_site.go  resolver.go  software_stop_site.go  stop_point.go  stop_site.go
debugger/test_targets/: .gitignore  CMakeLists.txt  anti_debugger.cpp  blocks.cpp  expr.cpp  global_variable.cpp  libmeow.cpp  marshmallow.cpp  member_pointer.cpp  multi_cu_main.cpp  multi_cu_other.cpp  multi_threaded.cpp  multi_threaded2.cpp  overloaded.cpp  step.cpp
dwarf/: abbreviation_section.go  address_ranges_section.go  attribute_constants.go  call_frame_info.go  constants.go  cursor.go  debug_info_entry.go  eh_frame_section.go  expression.go  file.go  format_constants.go  frame_section.go  information_section.go  line_section.go  location.go  operation_constants.go  string_section.go  tag_constants.go
elf/: file.go  header.go  section.go
pipe/: pipe.go
procfs/: procfs.go
ptrace/: client.go  messages.go  ptrace.go  server.go  syscall.go
test/targets/: .gitignore  CMakeLists.txt  hello_world.cpp  print_longdouble.cpp  run_endlessly.cpp
test_targets/: .gitignore  CMakeLists.txt  memory.cpp  reg_read.s  reg_write.s
